# apps/api/openapi.json
@@ -468,6 +468,17 @@
     },
     "/api/v1/space": {
       "get": {
+        "parameters": [
+          {
+            "schema": {
+              "format": "uuid",
+              "type": "string"
+            },
+            "in": "header",
+            "name": "x-ohana-member",
+            "required": false
+          }
+        ],
         "responses": {
           "200": {
             "description": "Default Response",
@@ -523,6 +534,17 @@
             }
           }
         },
+        "parameters": [
+          {
+            "schema": {
+              "format": "uuid",
+              "type": "string"
+            },
+            "in": "header",
+            "name": "x-ohana-member",
+            "required": false
+          }
+        ],
         "responses": {
           "200": {
             "description": "Default Response",
